syntax = "proto3";

option csharp_namespace = "MultiDownloader.DatabaseApi.GrpcHost.Users";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc GetAllUsers (EmptyRequest) returns (UsersResponse);
  rpc AddUser (AddUserRequest) returns (ResultMessage);
  rpc UpdateUser (UpdateUserRequest) returns (ResultMessage);
  rpc DeleteUser (UserRequest) returns (ResultMessage);
}

message UserRequest {
  int64 chatId = 1;
}

message UserResponse {
  int64 chatId = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  repeated Job jobs = 6;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message AddUserRequest {
  int64 chatId = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
}

message UpdateUserRequest {
  int64 chatId = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
}

message ResultMessage {
	string message = 1;
}

message EmptyRequest {}

message Job {
  int32 jobId = 1;
  string title = 2;
  string url = 3;
  string fileType = 4;
  string source = 5;
  string resultStatus = 6;
}
